contracts/gear-lib-ng/tests/derive/4-union-struct.rs
use gear_lib::StorageProvider;

#[derive(StorageProvider)]
struct Contract;

fn main() {}
